# api_rust

./: Cargo.toml
src/: main.rs  main_monolithic.rs
src/config/: settings.rs
src/domain/entities/: user.rs
src/domain/repositories/: user_repository.rs
src/domain/services/: user_service.rs
src/infrastructure/http/: routes.rs
src/infrastructure/http/dto/: user_dto.rs
src/infrastructure/http/handlers/: health_handler.rs  user_handler.rs
src/infrastructure/persistence/: in_memory_user_repository.rs
src/shared/: errors.rs  mod.rs
