[package]
name = "api_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"
config = "0.15.19"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
